Fixed avtar overlap issue

--- a/style.css
+++ b/style.css
@@ -2128,10 +2128,7 @@ body.page .main-navigation {
 
 @media only screen and (min-width: 1168px) {
   #comments > #respond .comment-user-avatar {
-    position: absolute;
     display: block;
-    top: 0;
-    left: 0;
   }
   #comments > #respond .comment-user-avatar .avatar {
     display: block;
